crates/cli/tests/snapshots/lib__check@not_a_function.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/not_a_function.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/not_a_function.nemo
---
success: false
exit_code: 1
----- stdout -----
[16] Error: Can't a call a value of type I32 as a function
   ╭─[ tests/check/not_a_function.nemo:3:3 ]
   │
 3 │   x(0)
   │   ┬  
   │   ╰── Can't a call a value of type I32 as a function
───╯


----- stderr -----
Error: "Check failed with 1 errors"
